2009-07-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/StackedBarRenderer3D.java
    (ignoreZeroValues): New flag,
    (getIgnoreZeroValues): New method,
    (setIgnoreZeroValues): Likewise,
    (createStackedValueList): Removed static modifier and check value of new
    flag,
    (equals): Check value of new flag,
    (hashCode): New method override.

2009-07-06  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CategoryPlot.java
    (clone): Update plot references in cloned renderers,
    * source/org/jfree/chart/plot/XYPlot.java
    (clone): Likewise.

2009-07-06  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (paintComponent): Clear off screen buffer to fully transparent.

2009-06-29  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/JFreeChart.java
    (draw): Check the visibility of the main chart title before drawing it.

2009-06-29  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/CategoryAxis.java
    (draw):  Add axis entity before drawing labels.

2009-06-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimeSeriesCollection.java
    (clone): New method override.

2009-06-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/ohlc/OHLCSeriesCollection.java
    (removeSeries(int)): New method,
    (removeSeries(OHLCSeries)): Likewise,
    (removeAllSeries): Likewise.

2009-06-24  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2809117 by Peter Kolb:
    * source/org/jfree/chart/annotations/AbstractAnnotation.java: New file,
    * source/org/jfree/chart/annotations/AbstractXYAnnotation.java:
    Now extends AbstractAnnotation,
    * source/org/jfree/chart/annotations/Annotation.java: New file,
    * source/org/jfree/chart/annotations/CategoryAnnotation.java: