@@ -1,3 +1,8 @@
+2009-07-08  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/axis/NumberAxis.java
+    (createStandardTickUnits): Added additional units for small tick sizes.
+
 2009-07-07  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/renderer/category/StackedBarRenderer3D.java
